# markdown_viewer

./: .gitattributes  .gitignore  CONCEPT.md  README.md  WORKLOG.md  dev-setup-arm64.ps1  index.html  make_icon.ps1  package.json  pnpm-lock.yaml  sample.md  svelte.config.js  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: CopilotPane.svelte  GitHubDialog.svelte  MarkdownRenderer.svelte  SearchBar.svelte  Sidebar.svelte  Toolbar.svelte  UpdateDialog.svelte  github.ts  markdownParser.ts  pathUtils.ts  theme.ts
src/lib/__tests__/: github.test.ts  markdownParser.test.ts  pathUtils.test.ts
src/styles/: app.css
