[package]
name = "markdown-viewer"
version = "0.1.2"
description = "A focused Markdown viewer"
authors = []
edition = "2021"

[lib]
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
notify = "6"
