[package]
name = "markdown-viewer"
version = "0.1.3"
description = "A focused Markdown viewer"
authors = []
edition = "2021"

[lib]
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
url = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
notify = "6"
